# clipper-lib

./: .gitignore  CMakeLists.txt  README.md
clipper/: clipper.cpp  clipper.hpp  clipper_export.hpp
